# phasar

./: .clang-tidy  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  BUILD.md  BreakingChanges.md  CMakeLists.txt  Config.cmake.in  Dockerfile  README.md  bootstrap.sh  conanfile.py  config.h.in
examples/how-to/: CMakeLists.txt  README.md
examples/how-to/00-load-llvm-ir/: CMakeLists.txt  README.md  main.cpp
examples/how-to/01-build-type-hierarchy/: CMakeLists.txt  README.md  main.cpp
examples/how-to/02-build-call-graph/: CMakeLists.txt  README.md  build_llvm_based_call_graph.cpp  build_llvm_based_icfg.cpp
examples/how-to/03-create-alias-info/: CMakeLists.txt  README.md  main.cpp
examples/how-to/04-run-ifds-analysis/: CMakeLists.txt  README.md  helper-analyses.cpp  ifds-solver.cpp  otf-reporter.cpp  simple.cpp
examples/how-to/05-run-ide-analysis/: CMakeLists.txt  README.md  helper-analyses.cpp  ide-solver.cpp  simple.cpp
examples/how-to/07-write-ifds-analysis/: CMakeLists.txt  README.md  simple.cpp
examples/how-to/08-write-ide-analysis/: CMakeLists.txt  README.md  simple.cpp
examples/llvm-hello-world/: CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt  LibPhasar.cpp
lib/AnalysisStrategy/: CMakeLists.txt  Strategies.cpp  Strategies.cppm
lib/Config/: CMakeLists.txt  Config.cppm  Configuration.cpp
lib/ControlFlow/: CMakeLists.txt  CallGraphAnalysisType.cpp  ControlFlow.cppm
lib/DB/: CMakeLists.txt  DB.cppm
lib/DataFlow/: CMakeLists.txt  DataFlow.cppm
lib/DataFlow/IfdsIde/: CMakeLists.txt  IfdsIde.cppm
lib/DataFlow/Mono/: CMakeLists.txt  Mono.cppm
lib/DataFlow/PathSensitivity/: CMakeLists.txt  PathSensitivity.cppm
lib/Domain/: CMakeLists.txt  Domain.cppm
lib/PhasarClang/: CMakeLists.txt
lib/PhasarLLVM/: CMakeLists.txt  HelperAnalyses.cpp  PhasarLLVM.cppm
lib/PhasarLLVM/ControlFlow/: CMakeLists.txt  ControlFlow.cppm  EntryFunctionUtils.cpp  GlobalCtorsDtorsModel.cpp  LLVMBasedBackwardICFG.cpp  LLVMBasedCallGraphBuilder.cpp  LLVMBasedICFG.cpp  LLVMVFTableProvider.cpp  SVFGCache.cpp  SVFGCache.h  SparseLLVMBasedICFG.cpp  SparseLLVMBasedICFGView.cpp
lib/PhasarLLVM/ControlFlow/Resolver/: CHAResolver.cpp  NOResolver.cpp  OTFResolver.cpp  PrecomputedResolver.cpp  RTAResolver.cpp  Resolver.cpp  VTAResolver.cpp
lib/PhasarLLVM/ControlFlow/VTA/: TypeAssignmentGraph.cpp  TypePropagator.cpp
lib/PhasarLLVM/DB/: CMakeLists.txt  DB.cppm  LLVMProjectIRDB.cpp
lib/PhasarLLVM/DataFlow/: CMakeLists.txt  DataFlow.cppm
lib/PhasarLLVM/DataFlow/IfdsIde/: CFLFieldSensIFDSProblem.cpp  CMakeLists.txt  DefaultAliasAwareIDEFlowFunctions.cpp  DefaultAllocSitesAwareIDEFlowFunctions.cpp  DefaultNoaliasIDEFlowFunctions.cpp  DefaultReachableAllocationSitesIDEProblem.cpp  IfdsIde.cppm  LibCSummary.cpp
lib/PhasarLLVM/DataFlow/Mono/: CMakeLists.txt  Mono.cppm
lib/PhasarLLVM/DataFlow/PathSensitivity/: CMakeLists.txt  (+3 more)
lib/PhasarLLVM/Domain/: CMakeLists.txt  Domain.cppm
lib/PhasarLLVM/Passes/: CMakeLists.txt  GeneralStatisticsAnalysis.cpp  Passes.cppm
lib/PhasarLLVM/Pointer/: AliasAnalysisView.cpp  CMakeLists.txt  CachedLLVMAliasIterator.cpp  FilteredAliasesUtils.h  FilteredLLVMAliasIterator.cpp  FilteredLLVMAliasSet.cpp  LLVMAliasSet.cpp  LLVMBasePointerAliasSet.cpp  LLVMBasedAliasAnalysis.cpp  LLVMBasedAliasAnalysis.h  LLVMPointerAssignmentGraph.cpp  LLVMUnionFindAA.cpp  LLVMUnionFindAliasSet.cpp  Pointer.cppm
lib/PhasarLLVM/TaintConfig/: CMakeLists.txt  LLVMTaintConfig.cpp  TaintConfig.cppm
lib/PhasarLLVM/TypeHierarchy/: CMakeLists.txt  DIBasedTypeHierarchy.cpp  LLVMTypeHierarchy.cpp  LLVMVFTable.cpp  TypeHierarchy.cppm
lib/PhasarLLVM/Utils/: AllocatedTypes.cpp  Annotation.cpp  CMakeLists.txt  LLVMAnalysisPrinter.cpp  LLVMIRToSrc.cpp  LLVMShorthands.cpp  Utils.cppm
lib/PhasarPass/: CMakeLists.txt  PhasarPass.cpp  PhasarPass.cppm
lib/Pointer/: CMakeLists.txt  PhasarPointer.cppm  PointsToInfo.cpp  UnionFindAA.cpp
lib/TypeHierarchy/: CMakeLists.txt  TypeHierarchy.cppm
lib/Utils/: CMakeLists.txt  ChronoUtils.cpp  DOTGraph.cpp  IO.cpp  LibCSummary.cpp  LibrarySummary.cpp  Logger.cpp  MemoryLocationAllocator.cpp  NlohmannLogging.cpp  PAMM.cpp  Utilities.cpp  Utils.cppm
test/llvm_test_code/pure_flow/: CMakeLists.txt  all_flow_functions_01.cpp  int_call_no_params_01.cpp  int_call_one_param_01.cpp  int_call_pointer_param_01.cpp  void_call_no_params_01.cpp  void_call_one_param_01.cpp  void_call_pointer_param_01.cpp
tools/: CMakeLists.txt
tools/call-graph/: call-graph.cpp
tools/example-tool/: myphasartool.cpp
tools/hello-modules-tool/: CMakeLists.txt  hello_modules.cpp
tools/phasar-cli/: phasar-cli.cpp
tools/phasar-cli/Controller/: AnalysisController.cpp  AnalysisControllerInternal.h  AnalysisControllerInternalIDE.h  AnalysisControllerXIDEFIIA.cpp  AnalysisControllerXIFDSCFLEnvTaint.cpp  AnalysisControllerXIFDSTaint.cpp
tools/ptaben/: AliasQueryType.cpp  AliasQueryType.h  AliasQueryType.inc  PTAResult.cpp  PTAResult.h  PTAUtils.cpp  PTAUtils.h  QueryId.h  QueryLocation.h  QuerySer.h  QuerySerializer.cpp  README.md  ResultCollector.cpp  ResultsCollector.h  ptaben_benchmark_tool.cpp
unittests/: CMakeLists.txt
unittests/DB/: CMakeLists.txt  HexastoreTest.cpp
unittests/PhasarLLVM/ControlFlow/: CMakeLists.txt  LLVMBasedBackwardICFGTest.cpp  LLVMBasedCFGTest.cpp  LLVMBasedICFGExportTest.cpp  LLVMBasedICFGGlobCtorDtorTest.cpp  LLVMBasedICFG_OTFTest.cpp  LLVMBasedICFG_RTA_MultipleInheritanceTest.cpp  VTACallGraphTest.cpp
unittests/PhasarLLVM/Pointer/: CMakeLists.txt  FilteredLLVMAliasSetTest.cpp  LLVMAliasSetSerializationTest.cpp  LLVMAliasSetTest.cpp  LLVMUnionFindAATest.cpp  SVFAliasSetTest.cpp
unittests/PhasarLLVM/TaintConfig/: TaintConfigTest.cpp
unittests/PhasarLLVM/TypeHierarchy/: CMakeLists.txt  DIBasedTypeHierarchyTest.cpp  LLVMTypeHierarchySerializationTest.cpp  LLVMTypeHierarchyTest.cpp
unittests/TestUtils/: SrcCodeLocationEntry.h
unittests/Utils/: AnalysisPrinterTest.cpp  BitVectorSetTest.cpp  CMakeLists.txt  OnTheFlyAnalysisPrinterTest.cpp  SCCGenericTest.cpp  SourceMgrPrinterTest.cpp  ValueIdMapTest.cpp
(+423 files in other folders)
